assets/css/main.css
.text-secondary {
  color: #000000 !important;
}

#me {
  width: 15vw;
  border-radius: 50%;
}

.header{
  height: 10vh;
}

#about{
  padding-top: 8vh;
  max-width: 850px;
  margin: auto;
  padding-bottom: 12vh;
}

.container{
  padding: 0 5vw;
}

.avatar-container{
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 40px;
}

.modal-body{
  padding: 40px 0;
}

.bg-primary {
  background-color: #fff !important;
}

.bg-secondary {
  background-color: #fff !important;
}

img {
  padding-top: 20px;
}

#mainNav .navbar-brand {
  color: rgb(52, 52, 52);
  font-size: 1em;
  font-weight: 700;
  padding-top: 10px;
}

#mainNav .navbar-nav li.nav-item a.nav-link {
  color: rgb(52, 52, 52);
}

a {
  color: rgb(52, 52, 52);
}

section {
  padding: 4rem 0;
}

.btn{
  color: #000;
  border-color: #000;
}

.about-header{
  font-family: 'Mulish';
  font-weight: 600;
  font-size: 1.2em;
  text-align: center;
  text-transform: none;
  color: #aeaeae;
  padding-bottom: 5px;
  margin-bottom: 5px;
}

.avatar{
  width: 160px;
  border-radius: 50%;
  padding: 0;
}

.about-body{
  color: #000;
  font-family: 'Mulish';
  font-weight: 400;
  font-size: 0.8em;
  text-align: center;
  letter-spacing: 1px;
  padding-bottom: 30px;
}

.project-link{
  font-family: 'Mulish';
  color:rgb(69, 129, 249);
}

h2{
  font-family: 'Syncopate';
  font-weight: 700;
  font-size: 1.4em;
}

.project-text{
  color: #000;
  font-family: 'Mulish';
  font-weight: 200;
  text-align: left;
  font-size: 1em;
}

.project-tech{
  color: #000;
  font-family: 'Mulish';
  font-weight: 600;
  text-align: center;
  font-size: 0.8em;
  padding-top: 20px;
}

.contact{
  font-family: 'Syncopate';
  font-weight: 200;
  text-align: center;
  text-transform: capitalize;
  font-size: 1.5em;
  color:rgb(98, 98, 98)
}

.about-subheader{
  color:#000;
  font-family: 'Mulish';
  text-align: center;
  font-weight: 300;
  padding-bottom: 10px;
}

input{
  font-family: 'Mulish';
  font-size: 0.8em;
}

textarea{
  font-family: 'Mulish';
  font-size: 0.8em;
}

.fa{
  color: #000;
}

.footer-text{
  font-family: 'Syncopate';
  font-size: 0.8em;
}

#mainNav .navbar-toggler {
  border: none;
}

.col-lg-8 {
  flex: 0 0 auto;
  width: 100%;
}

#mainNav.navbar-shrink .navbar-brand {
  font-size: 1.2em;
}

@media (min-width: 992px){
  #mainNav .navbar-nav>li.nav-item>a.nav-link.active {
      color: rgb(69, 129, 249);
      background: #fff;
  }
  .about-header{
    font-size: 1.4em;
    padding-bottom: 5px;
    font-weight: 400;
  }
  .about-body{
    font-size: 1em;
    font-weight: 200;
  }
}

